<resources>
    <string name="app_name">IMDb</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8">8</string>
    <string name="_2_3_hr">2.3 hr</string>
    <string name="_130_000">130,000</string>
    <string name="overview">Overview</string>
    <string name="overview_o">overview .........</string>
    <string name="revenue">Revenue:</string>
    <string name="budget">Budget:</string>
    <string name="runtime">Runtime:</string>
    <string name="rating">Rating:</string>
    <string name="released_ate">ReleaseD ate:</string>
    <string name="movie_info">Movie Info</string>
    <string name="sub_title">sub title</string>
    <string name="movie">movie</string>
    <string name="connection_problem">Connection Problem!!</string>
    <string name="error_message">Error Message</string>
</resources>
